--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,12 +3,22 @@ version: 0.2
 phases:
   install:
     runtime-versions:
-      java: latest
+      java: corretto17
 
   build:
     commands:
       - echo "Project Key: $SONAR_PROJECT_KEY"
-      - echo "Org: $SONAR_PROJECT_KEY"
-      - "if [ -z \"$SONAR_TOKEN\" ]; then echo \"SONAR_TOKEN is empty\"; else echo \"SONAR_TOKEN is set\"; fi"
+      - echo "Org: $SONAR_ORG"
+      - |
+        if [ -z "$SONAR_TOKEN" ]; then
+          echo "SONAR_TOKEN is empty"
+          exit 1
+        else
+          echo "SONAR_TOKEN is set"
+        fi
       - echo "Token length: ${#SONAR_TOKEN}"
-      - mvn verify sonar:sonar -Dsonar.projectKey=$SONAR_PROJECT_KEY -Dsonar.organization=$SONAR_PROJECT_KEY -Dsonar.host.url=https://sonarcloud.io -Dsonar.token=$SONAR_TOKEN
+      - mvn verify sonar:sonar \
+          -Dsonar.projectKey=$SONAR_PROJECT_KEY \
+          -Dsonar.organization=$SONAR_ORG \
+          -Dsonar.host.url=https://sonarcloud.io \
+          -Dsonar.token=$SONAR_TOKEN
